testdata/trans/error/num-try-args/err.go
package foo

import (
	"fmt"
)

func f() error {
	try(fmt.Println("hello"), "oops", true)
}
